2000-09-12  Greg McGary  <greg@mcgary.org>

	* config/mips/mips-protos.h
	(trap_cmp_op, mips_gen_conditional_trap): New func decls.
	* config/mips/mips.h (ISA_HAS_COND_TRAP): New macro.
	(PREDICATE_CODES): Add "trap_cmp_op".
	* config/mips/mips.c
	(trap_cmp_op, mips_gen_conditional_trap): New functions.
	* config/mips/mips.md (trap, conditional_trap): New patterns.

2000-09-12  Bernd Schmidt  <bernds@redhat.co.uk>

	* flow.c (try_pre_increment_1): Don't do anything to sets of the stack
	pointer.

2000-09-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.c (built_in_decls): New array.
	(expand_builtin_fputs): New function.
	(expand_builtin): Handle BUILT_IN_FPUTC and BUILT_IN_FPUTS.

	* builtins.def (BUILT_IN_FPUTC, BUILT_IN_FPUTS): New members.

	* c-common.c (c_common_nodes_and_builtins): Handle fputc/fputs.

	* tree.h (built_in_decls): New array.

Tue Sep 12 08:53:57 2000  Jeffrey A Law  (law@cygnus.com)

	* convex.md: Use "+" instead of "=" for outputs wrapped in a
	STRICT_LOW_PART.
	* i370.md, i386.md, ns32k.md, sh.md, vax.md: Likewise.

2000-09-12  Kazu Hirata  <kazu@hxi.com>

	* haifa-sched.c: Fix formatting.

	* genattrtab.c: Fix formatting.

	* unroll.c: Fix formatting.

2000-09-12  Bruce Korb  <bkorb@gnu.org>

	* fixinc/fixfixes.c: make a type for the fix procedure & use it,
	remove obsolete code
	* fixinc/fixincl.c: Use PARAMS, not _P_.  Add no-op default to switch.
	* fixinc/fixincl.tpl: make non-exported arrays static scope
	* fixinc/fixincl.x: regenerate
	* fixinc/fixlib.h: Use PARAMS, not _P_
	* fixinc/fixtests.c: make a type for the test proc & use it
	* fixinc/server.h: Use PARAMS, not _P_

2000-09-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-typeck.c (process_init_element): Avoid union init warnings on
	floating point zero.  Don't crash on unions containing structs.

2000-09-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.h (PREDICATE_CODES): Add CONST_DOUBLE to
	general_movsrc_operand, and remove CONST_INT from